<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".main.ReadMessage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/readSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_sides"
            android:paddingVertical="@dimen/read_subject_padding"
            android:minHeight="80dp"
            android:maxHeight="240dp"
            android:autoSizeTextType="uniform"
            android:text="@string/readSubjectDefault"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/readFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/Small"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="78dp"
            android:paddingHorizontal="@dimen/padding_sides"
            android:text = "@string/readFromDefault"
            app:layout_constraintTop_toBottomOf="@id/readSubject"
            app:layout_constraintBottom_toTopOf="@id/readTo"/>

        <TextView
            android:id="@+id/readTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/Regular"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="78dp"
            android:paddingHorizontal="@dimen/padding_sides"
            android:paddingBottom="@dimen/item_padding"
            android:text = "@string/readToDefault"
            app:layout_constraintTop_toBottomOf="@id/readFrom"
            app:layout_constraintBottom_toTopOf="@id/readBody"/>

        <WebView
            android:id="@+id/readBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/Small"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="78dp"
            android:paddingVertical="@dimen/read_content_padding"
            android:paddingHorizontal="@dimen/padding_sides"
            android:text = "@string/readBodyDefault"
            app:layout_constraintTop_toBottomOf="@id/readTo"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="?attr/actionBarSize"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>