<resources>
    <string name="invalid_username">Invalid username!</string>
    <string name="invalid_password">Password cannot be empty!</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Login</string>
    <string name="prompt_email">Address email</string>
    <string name="action_sign_in">Login</string>
    <string name="welcome">"Welcome "</string>
    <string name="login_failed">Wrong credentials</string>
    <string name="title_activity_authenticator">Login</string>
    <string name="mailo_logo_desc">Pale yellow-orange background in shape of rounded square with dark orange envelope pictogram in the foreground.</string>
    <string name="main_button_description">Click to create message or hold to use voice command</string>
    <string name="nav_header_title">Mailo</string>
    <string name="nav_header_subtitle">unknown user - error</string>
    <string name="FolderName">DEFAULT</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="syncMessPrefs">syncmessprefs</string>
    <string name="channel_name">Mailo</string>
    <string name="channel_description">New mail</string>
    <string name="readBodyDefault">There is nothing here to show</string>
    <string name="readSubjectDefault">This message has no subject</string>
    <string name="readFromDefault">Couldn\'t get sender of this message</string>
    <string name="readToDefault">Couldn\'t get addressee of this message</string>
    <string name="writeTo">To</string>
    <string name="writeSubject">Subject</string>
    <string name="writeContent">Write your mail content here…</string>
    <string name="go_back">Go Back</string>
    <string name="comma_separation">Addresses should be comma separated!</string>
    <string name="empty_recipient">Wrong information provided</string>
    <string name="succes_sending">Successfully send a message!</string>
    <string name="failure_sending">Failed sending a message. Try again later!</string>
    <string name="noTitle">No title</string>
    <string name="speechError">Sorry, I did not understand you</string>
    <string name="onboardingMainButton_title">This is MAIN BUTTON</string>
    <string name="onboardingMainButton_description">PRESS IT to send messages and reply to messages \nHOLD IT to make voice commands</string>
    <string name="onboardingMenuButton_title">Here you can find menu drawer</string>
    <string name="onboardingMenuButton_description">Use it to navigate between folders in your mailbox</string>
    <string name="Numeral1">One</string>
    <string name="Numeral2">Two</string>
    <string name="Numeral3">Three</string>
    <string name="Numeral4">Four</string>
    <string name="Numeral5">Five</string>
    <string name="Numeral6">Six</string>
    <string name="Numeral7">Seven</string>
    <string name="Numeral8">Eight</string>
    <string name="Numeral9">Nine</string>
    <string name="COMM_GoBack">go back</string>
    <string name="COMM_NewMessage">write new message</string>
    <string name="COMM_Reply">reply</string>
    <string name="COMM_ReplyNo">reply to message</string>
    <string name="COMM_Open">open</string>
    <string name="COMM_OpenNo">open message</string>
    <string name="COMM_Send">send</string>
    <string name="long_placeholder_text" translatable="false">Long placeholder text long placeholder text</string>
    <string name="COMM_Menu">menu</string>
    <string name="COMM_DeleteNo">delete message</string>
    <string name="COMM_Delete">delete</string>
    <string name="content_description_help">Voice commands - help</string>
    <string name="help">Help</string>
    <string name="Voice_commands_info">Voice Commands</string>
    <string name="onboardingHelpButton_title">Here is VOICE COMMANDS help view</string>
    <string name="onboardingHelpButton_description">You can find there all voice commands listed</string>
    <string name="pb_logo_desc">Bialystok University of Technology logo</string>
    <string name="title_activity_settings">General Settings</string>
    <string name="theme_pref_title">Theme for the application</string>
    <string name="sync_pref_title">Check for new messages in</string>
    <string name="pref_summary">Different customizations for Mailo app</string>
    <string name="pref_cat_title">Settings</string>
    <string name="a15_minutes">15 minutes</string>
    <string name="a30_minutes">30 minutes</string>
    <string name="a1_hour">1 hour</string>
    <string name="a8_hour">8 hours</string>
    <string name="a12_hour">12 hours</string>
    <string name="a24_hour">24 hours</string>
    <string name="aDefaultTheme">Default</string>
    <string name="aHCTheme">High contrast</string>
    <string name="COMM_Help">help</string>
</resources>