...
        android:layout_marginBottom="?attr/actionBarSize" />

        <com.google.android.material.navigation.NavigationView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="?attr/actionBarSize"
        android:id="@+id/navigationView"
        app:theme="@style/Theme.Mailo.NavMenu"
        app:headerLayout="@layout/header_navigation_drawer"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:menu="@menu/navigation_drawer"
        app:behavior_hideable="true" />

...
    android:layout_gravity="bottom"
    style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
    app:navigationIcon="@drawable/ic_menu_24dp"
    app:menu="@menu/bottom_app_bar"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/ic_create_24dp"
    app:layout_anchor="@id/bottomAppBar"
    android:contentDescription="@string/main_button_description" />

...
